k8s/05-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: main-app
        image: node:18
        command: ["node", "server.js"]
        workingDir: /app
        volumeMounts:
        - name: code
          mountPath: /app
      - name: logger
        image: busybox
        command: ["sh", "-c", "tail -f /app/logs/app.log"]
        volumeMounts:
        - name: code
          mountPath: /app
      volumes:
      - name: code
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: taskapp
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
